modificato generic name

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -11,7 +11,7 @@ description:
       - |-
         servizi di rilevazione e vigilanza sanitaria per la pubblica
         amministrazione piemontese
-    genericName: sreg
+    genericName: vigilsan
     localisedName: |-
       Piattaforma residenzialità
     longDescription: |2
