--- a/publiccode.yml
+++ b/publiccode.yml
@@ -17,25 +17,10 @@ description:
       Piattaforma residenzialità
     longDescription: |2
     
-      La piattaforma SREG (Servizi per la Rendicontazione degli Enti Gestori dei
-      servizi socio-assistenziali) è uno strumento web finalizzato alla raccolta
-      dati e alla rendicontazione annuale dell'attività svolta e della spesa
-      sociale sostenuta dagli enti. Offre supporto ai vari attori nelle diverse
-      fasi del processo di rendicontazione, costituendo un sistema gestionale
-      completo e flessibile. Agli enti gestori offre una guida nella
-      compilazione dei moduli online di rilevazione della spesa delle funzioni
-      socio-assistenziali e organizza in varie scadenze il conferimento dei dati
-      alla Regione. Agli operatori regionali offre vari strumenti per la
-      gestione delle istruttorie, sia in termini di controlli automatici sui
-      dati, sia in termini di gestione e monitoraggio del processo, nonché nella
-      comunicazione diretta con i referenti compilatori. Il sistema include
-      anche l’organizzazione e gestione di un catalogo regionale degli
-      interventi e servizi sociali (o prestazioni) in modo flessibile e
-      direttamente traducibile nei parametri di riferimento delle rilevazioni a
-      livello nazionale. Coadiuva quindi gli enti anche nell'adempiere ai debiti
-      informativi verso il Ministero e l'ISTAT. Il sistema include anche un
-      front-end per la gestione anagrafica degli enti, delle utenze, delle loro
-      profilazioni e di tutte le abilitazioni all’uso dello strumento.
+La Piattaforma Regionale della Residenzialità raggiungibile attraverso il Portale Unico di Accesso dei servizi sanitari rivolta ai referenti delle strutture residenziali permette di:
+effettuare le rilevazioni settimanali e giornaliere delle disponibilità e delle occupazioni della struttura
+raccogliere la documentazione relativa agli adempimenti previsti dal servizio di Vigilanza.
+rispondere ai sondaggi proposti dalla Regione Piemonte
     shortDescription: |-
       VIGILSAN (Rilevazioni e Vigilanza sanitaria)
 developmentStatus: stable
