--- a/publiccode.yml
+++ b/publiccode.yml
@@ -14,11 +14,17 @@ description:
         amministrazione piemontese
     genericName: vigilsan
     localisedName: Piattaforma residenzialità
-    longDescription: |    
-La Piattaforma Regionale della Residenzialità raggiungibile attraverso il Portale Unico di Accesso dei servizi sanitari rivolta ai referenti delle strutture residenziali permette di:
-effettuare le rilevazioni settimanali e giornaliere delle disponibilità e delle occupazioni della struttura
-raccogliere la documentazione relativa agli adempimenti previsti dal servizio di Vigilanza.
-rispondere ai sondaggi proposti dalla Regione Piemonte
+    longDescription: |
+      La Piattaforma Regionale della Residenzialità raggiungibile attraverso il Portale Unico di Accesso 
+      
+      dei servizi sanitari rivolta ai referenti delle strutture residenziali permette di:
+
+
+      effettuare le rilevazioni settimanali e giornaliere delle disponibilità e delle occupazioni della struttura
+      
+      raccogliere la documentazione relativa agli adempimenti previsti dal servizio di Vigilanza.
+      
+      rispondere ai sondaggi proposti dalla Regione Piemonte.
     shortDescription: |-
       VIGILSAN (Rilevazioni e Vigilanza sanitaria)
 developmentStatus: stable
