ggiunto depends on

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -16,9 +16,7 @@ description:
     localisedName: Piattaforma residenzialità
     longDescription: |
       La Piattaforma Regionale della Residenzialità raggiungibile attraverso il Portale Unico di Accesso 
-      
       dei servizi sanitari rivolta ai referenti delle strutture residenziali permette di:
-
 
       effettuare le rilevazioni settimanali e giornaliere delle disponibilità e delle occupazioni della struttura
       
@@ -27,6 +25,9 @@ description:
       rispondere ai sondaggi proposti dalla Regione Piemonte.
     shortDescription: |-
       VIGILSAN (Rilevazioni e Vigilanza sanitaria)
+categories:
+  - healthcare
+  - welfare
 developmentStatus: stable
 it:
   conforme:
@@ -34,7 +35,7 @@ it:
     lineeGuidaDesign: true
     misureMinimeSicurezza: true
     modelloInteroperabilita: true
-  countryExtensionVersion: '0.2'
+    countryExtensionVersion: '0.2'
   piattaforme:
     anpr: false
     cie: true
@@ -48,6 +49,11 @@ localisation:
   availableLanguages:
     - it
   localisationReady: false
+dependsOn:
+  open:
+    - name: PostgreSQL
+      version: "15.4"
+      optional: yes
 maintenance:
   contacts:
     - email: alessandro.trombotto@csi.it
