--- a/publiccode.yml
+++ b/publiccode.yml
@@ -6,6 +6,13 @@ publiccodeYmlVersion: '0.2'
 applicationSuite: Piattaforma regionale della residenzialità
 categories:
   - erp
+dependsOn:
+  open:
+    - name: PostgreSQL
+      version: "15.4"
+      optional: false
+      versionMax: ''
+      versionMin: ''
 description:
   it:
     features:
@@ -25,9 +32,6 @@ description:
       rispondere ai sondaggi proposti dalla Regione Piemonte.
     shortDescription: |-
       VIGILSAN (Rilevazioni e Vigilanza sanitaria)
-categories:
-  - healthcare
-  - welfare
 developmentStatus: stable
 it:
   conforme:
@@ -49,11 +53,6 @@ localisation:
   availableLanguages:
     - it
   localisationReady: false
-dependsOn:
-  open:
-    - name: PostgreSQL
-      version: "15.4"
-      optional: yes
 maintenance:
   contacts:
     - email: alessandro.trombotto@csi.it
