--- a/publiccode.yml
+++ b/publiccode.yml
@@ -22,8 +22,7 @@ description:
       raccogliere la documentazione relativa agli adempimenti previsti dal servizio di Vigilanza.
       
       rispondere ai sondaggi proposti dalla Regione Piemonte.
-    shortDescription: |-
-      VIGILSAN (Rilevazioni e Vigilanza sanitaria)
+    shortDescription: VIGILSAN (Rilevazioni e Vigilanza sanitaria)
 developmentStatus: stable
 it:
   conforme:
